# czekitout

./: .coveragerc  .gitignore  CHANGELOG.rst  README.md  README.rst  notes.rst  pyproject.toml  setup.py
.github/workflows/: measure_code_coverage.yml  publish_documentation_website.yml  publish_release_to_pypi.yml
czekitout/: __init__.py  check.py  convert.py  isa.py  name.py  version.py
docs/: INSTALL.rst  api.rst  build_docs.py  conf.py  index.rst  literature.rst  versions.yaml
docs/_autosummary/: czekitout.check.if_bool_matrix.rst  czekitout.check.if_float_seq.rst  czekitout.check.if_int.rst  czekitout.check.if_nonnegative_float_seq.rst  czekitout.check.if_nonnegative_int.rst  czekitout.check.if_nonnegative_int_seq.rst  czekitout.check.if_pair_of_floats.rst  czekitout.check.if_pair_of_nonnegative_ints.rst  czekitout.check.if_pair_of_positive_floats.rst  czekitout.check.if_pair_of_positive_ints.rst  czekitout.check.if_pairs_of_floats.rst  czekitout.check.if_path_like.rst  czekitout.check.if_path_like_seq.rst  czekitout.check.if_positive_float.rst  czekitout.check.if_positive_float_seq.rst  czekitout.check.if_positive_int.rst  czekitout.check.if_quadruplet_of_nonnegative_ints.rst  czekitout.check.if_real_numpy_matrix.rst  czekitout.check.if_real_two_column_numpy_matrix.rst  czekitout.check.if_str_like.rst  czekitout.check.rst  czekitout.convert.rst  czekitout.convert.to_bool_numpy_array_3d.rst  czekitout.convert.to_dict.rst  (+38 more)
examples/: using_check_module.ipynb  using_convert_module.ipynb  using_isa_module.ipynb  using_name_module.ipynb
tests/: coverage.json  test_name.py
(+314 files in other folders)
